src/app/index.css
@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
@import url(../../bower_components/font-awesome/css/font-awesome.css);

/*material-icons are nessesary for MDL fully compatibility*/
@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
  src: local('Material Icons'),
       local('MaterialIcons-Regular'),
       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  width: 1em;
  height: 1em;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

main {
  padding: 20px;
  background: #fafafa;
}
.only-print{
    display: none;
}
.only-print p {
    font-size: 3em;
    line-height: 50px;
    font-stretch: semi-expanded;
}
@media print {
    .no-print {
        display: none !important;
    }
    .only-print {
        display: block;
    }
}

.skills {
    max-width:1500px;
    margin:0 auto;
}
.acme-card-wide.mdl-card {
  width: 100%;
}
.acme-card-wide > .mdl-card__title {
  color: #fff;
  height: 176px;
  background: url('../assets/images/yeoman.png') center / cover;
  background-size: 110px;
  background-repeat: no-repeat;
}
.acme-card-wide > .mdl-card__title > .mdl-card__title-text {
  color: #000;
}
.acme-card-wide > .mdl-card__menu {
  color: #000;
}
.acme-card-wide > .mdl-card__actions {
  text-align: center;
}

.acme-card-square.mdl-card {
  width: 100%;
  min-height: 200px;
}
.acme-card-square > .mdl-card__title {
  color: #fff;
  background: #283593;
}
.acme-card-square > .mdl-card__media {
  color: #fff;
  background: none;
  text-align: center;
}
.section__text {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -webkit-flex-shrink: 0;
      -ms-flex-negative: 0;
          flex-shrink: 0;
  padding-top: 8px;
}

.section__text h5 {
  margin: 0 5px 10px;
  margin-bottom: 0.5em;
}

.circular {
	width: 150px;
	height: 150px;
	border-radius: 75px;
	-webkit-border-radius: 75px;
	-moz-border-radius: 75px;
	background: url(../assets/images/mm.png) no-repeat;
    background-size: 100% auto;

    /* ie fallbacks */
	background-image: url(../assets/images/mm.png) no-repeat;
	}

.circular img {
	opacity: 0;
	filter: alpha(opacity=0);
	}

.header-image {
    position: absolute;
}

.header__main-info {
    margin-left: 50px;
    font-size: 1.5em;
    font-weight: 500;
}
.header__main-info span {
    font-size: 0.5em;
}
.contact-personal-info {
    margin-left: 165px;
    margin-bottom: 40px;
    font-size: 1.3em;
    line-height: 1.7em;
}
.cd-timeline-img.cd-work {
  background: #B53F51;
  color: white;
}

.cd-timeline-img.cd-work i {
    margin-left: -15px;
    margin-top: -15px;
}

.cd-timeline-img.cd-education {
  background: #51B53F;
}

.mdl-card__title-text > i {
    margin: 0 10px;
}
a.contact_m {
    text-decoration: none;
    color: #242F69;
}
a.contact_m:hover {
    text-decoration: underline;
}

@media only screen and (max-width: 768px) {
    .mdl-mini-footer {
        display: none;
    }
    .circular {
    	width: 75px;
    	height: 75px;
    }
    .header__main-info {
        margin-left: 25px;
        font-size: 1.3em;
    }
    .contact-personal-info {
        margin: 20px 0;
        font-size: 1.2em;
        line-height: 1.1em;
    }
    .contact-personal-info > div {
        margin-top: 10px;
    }
    .header-links {
        display: none;
    }
}

@media only screen and (max-width: 1170px) {
    .circular {
        width: 100px;
        height: 100px;
    }
    .contact-personal-info {
        margin-left: 105px;
    }
    .header__main-info {
        margin-left: 25px;
    }
}
.acme-card-square.mdl-card.no-additional-content-box {
    min-height: 0;
}
footer {
    font-size: 1em;
}

/*overrite material css*/
    h2 {
        line-height: normal;
        margin: auto;
    }
    h4 {
        font-size: 20px;
    }
    .mdl-card__supporting-text {
        color: rgba(0,0,0,.87);
        line-height: 1.6;
    }
    .mdl-mini-footer {
        padding: 10px 16px;
    }
    a {
        color: inherit;
    }
/*end: overrite material css*/

